CSS code changed for fixing the alignment

--- a/app/design/frontend/Alothemes/default/web/css/styles.css
+++ b/app/design/frontend/Alothemes/default/web/css/styles.css
@@ -3779,11 +3779,12 @@ font-size: 12px;
 	border: none !important;
 }
 
-
 .form_cont {
 	border: 1px solid #ddd;
 	padding: 30px;
 	border-radius: 5px;
+	width: 435px;
+	margin: 0 auto;
 }
 
 .block_tit {
@@ -6679,9 +6680,8 @@ body.marketplace-seller-displayseller li.item.product.product-item {
 
 /*------- Sign in page ---------*/
 .block_tit_sign {
-	margin-top: 50px;
+	margin-top: 75px;
 	text-align: center;
-	margin-bottom: -35px;
 }
 
 
@@ -6704,7 +6704,7 @@ body.marketplace-seller-displayseller li.item.product.product-item {
     height: 1px;
     border-top: 1px solid #e7e7e7;
     position: absolute;
-    top: 72%;
+    top: 71%;
     margin-top: 0px;
     z-index: 1;
 }
